ecourse.core/src/main/java/eapli/ecourse/exammanagment/antlr4/formativeexam/FormativeExamParser.java
package eapli.ecourse.exammanagment.antlr4.formativeexam;// Generated from FormativeExam.g4 by ANTLR 4.10.1

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FormativeExamParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, TRUE=4, FALSE=5, FEEDBACK=6, GRADE=7, SECCAO=8, 
		SOLUCAO=9, OPTIONS=10, ACCEPTED=11, MATCHING=12, SINGLE_CHOICE=13, MULTIPLE_CHOICE=14, 
		SHORT_ANSWER=15, NUMERIC=16, MISSING_WORDS=17, TRUE_FALSE=18, DECIMALS_ALLOWED=19, 
		MISSING_LEFT=20, MISSING_RIGHT=21, NUMERO=22, PALAVRA=23, ASTERISCO=24, 
		HIFEN=25, UNDERSCORE=26, ESPACO=27, PONTO_FINAL=28, DOIS_PONTOS=29, RETICENCIAS=30, 
		VIRGULA=31, PONTO_INTERROGACAO=32, PONTO_EXCLAMACAO=33, PARENTESIS_DIREITO=34, 
		PARENTESIS_ESQUERDO=35, WINDOWS_NEWLINE=36, NEWLINE=37;
	public static final int
		RULE_start = 0, RULE_exame = 1, RULE_regraTituloExame = 2, RULE_regraHeaderExame = 3, 
		RULE_feedback = 4, RULE_grade = 5, RULE_seccao = 6, RULE_pergunta = 7, 
		RULE_frase = 8, RULE_palavra = 9, RULE_regraMensagem = 10, RULE_pontucao = 11, 
		RULE_type = 12, RULE_cotacao = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "exame", "regraTituloExame", "regraHeaderExame", "feedback", 
			"grade", "seccao", "pergunta", "frase", "palavra", "regraMensagem", "pontucao", 
			"type", "cotacao"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'QUESTION'", "'Type: '", "'Question value: '", "'True'", "'False'", 
			"'Feedback:'", "'Grade:'", "'Sec\\u00E7\\u00E3o'", "'Solution:'", "'Options:'", 
			"'Accepted: '", "'Matching'", "'Single-Choice'", "'Multiple-Choice'", 
			"'Short Answer'", "'Numeric'", "'Select Missing Words'", "'True or False'", 
			"'Decimal numbers are allowed!'", "'[['", "']]'", null, null, "'*'", 
			"'-'", "'_'", null, "'.'", "':'", "'...'", "','", "'?'", "'!'", "')'", 
			"'('", "'\\r\\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "TRUE", "FALSE", "FEEDBACK", "GRADE", "SECCAO", 
			"SOLUCAO", "OPTIONS", "ACCEPTED", "MATCHING", "SINGLE_CHOICE", "MULTIPLE_CHOICE", 
			"SHORT_ANSWER", "NUMERIC", "MISSING_WORDS", "TRUE_FALSE", "DECIMALS_ALLOWED", 
			"MISSING_LEFT", "MISSING_RIGHT", "NUMERO", "PALAVRA", "ASTERISCO", "HIFEN", 
			"UNDERSCORE", "ESPACO", "PONTO_FINAL", "DOIS_PONTOS", "RETICENCIAS", 
			"VIRGULA", "PONTO_INTERROGACAO", "PONTO_EXCLAMACAO", "PARENTESIS_DIREITO", 
			"PARENTESIS_ESQUERDO", "WINDOWS_NEWLINE", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FormativeExam.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FormativeExamParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ExameContext exame() {
			return getRuleContext(ExameContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			exame();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExameContext extends ParserRuleContext {
		public RegraTituloExameContext regraTituloExame() {
			return getRuleContext(RegraTituloExameContext.class,0);
		}
		public RegraHeaderExameContext regraHeaderExame() {
			return getRuleContext(RegraHeaderExameContext.class,0);
		}
		public List<SeccaoContext> seccao() {
			return getRuleContexts(SeccaoContext.class);
		}
		public SeccaoContext seccao(int i) {
			return getRuleContext(SeccaoContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(FormativeExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FormativeExamParser.NEWLINE, i);
		}
		public List<TerminalNode> WINDOWS_NEWLINE() { return getTokens(FormativeExamParser.WINDOWS_NEWLINE); }
		public TerminalNode WINDOWS_NEWLINE(int i) {
			return getToken(FormativeExamParser.WINDOWS_NEWLINE, i);
		}
		public ExameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exame; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterExame(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitExame(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitExame(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExameContext exame() throws RecognitionException {
		ExameContext _localctx = new ExameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exame);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			regraTituloExame();
			setState(32); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(31);
				_la = _input.LA(1);
				if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(34); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WINDOWS_NEWLINE || _la==NEWLINE );
			setState(36);
			regraHeaderExame();
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(37);
					_la = _input.LA(1);
					if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(40); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WINDOWS_NEWLINE || _la==NEWLINE );
				setState(42);
				seccao();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WINDOWS_NEWLINE || _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegraTituloExameContext extends ParserRuleContext {
		public FraseContext frase() {
			return getRuleContext(FraseContext.class,0);
		}
		public RegraTituloExameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regraTituloExame; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterRegraTituloExame(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitRegraTituloExame(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitRegraTituloExame(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegraTituloExameContext regraTituloExame() throws RecognitionException {
		RegraTituloExameContext _localctx = new RegraTituloExameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_regraTituloExame);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			frase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegraHeaderExameContext extends ParserRuleContext {
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public GradeContext grade() {
			return getRuleContext(GradeContext.class,0);
		}
		public RegraMensagemContext regraMensagem() {
			return getRuleContext(RegraMensagemContext.class,0);
		}
		public RegraHeaderExameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regraHeaderExame; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterRegraHeaderExame(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitRegraHeaderExame(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitRegraHeaderExame(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegraHeaderExameContext regraHeaderExame() throws RecognitionException {
		RegraHeaderExameContext _localctx = new RegraHeaderExameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_regraHeaderExame);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			feedback();
			setState(50);
			grade();
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMERO) | (1L << PALAVRA) | (1L << HIFEN) | (1L << UNDERSCORE))) != 0)) {
				{
				setState(51);
				regraMensagem();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeedbackContext extends ParserRuleContext {
		public TerminalNode FEEDBACK() { return getToken(FormativeExamParser.FEEDBACK, 0); }
		public TerminalNode ESPACO() { return getToken(FormativeExamParser.ESPACO, 0); }
		public FraseContext frase() {
			return getRuleContext(FraseContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(FormativeExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FormativeExamParser.NEWLINE, i);
		}
		public List<TerminalNode> WINDOWS_NEWLINE() { return getTokens(FormativeExamParser.WINDOWS_NEWLINE); }
		public TerminalNode WINDOWS_NEWLINE(int i) {
			return getToken(FormativeExamParser.WINDOWS_NEWLINE, i);
		}
		public FeedbackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feedback; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterFeedback(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitFeedback(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitFeedback(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeedbackContext feedback() throws RecognitionException {
		FeedbackContext _localctx = new FeedbackContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_feedback);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(FEEDBACK);
			setState(55);
			match(ESPACO);
			setState(56);
			frase();
			setState(58); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(57);
				_la = _input.LA(1);
				if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WINDOWS_NEWLINE || _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GradeContext extends ParserRuleContext {
		public TerminalNode GRADE() { return getToken(FormativeExamParser.GRADE, 0); }
		public TerminalNode ESPACO() { return getToken(FormativeExamParser.ESPACO, 0); }
		public FraseContext frase() {
			return getRuleContext(FraseContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(FormativeExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FormativeExamParser.NEWLINE, i);
		}
		public List<TerminalNode> WINDOWS_NEWLINE() { return getTokens(FormativeExamParser.WINDOWS_NEWLINE); }
		public TerminalNode WINDOWS_NEWLINE(int i) {
			return getToken(FormativeExamParser.WINDOWS_NEWLINE, i);
		}
		public GradeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grade; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterGrade(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitGrade(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitGrade(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GradeContext grade() throws RecognitionException {
		GradeContext _localctx = new GradeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_grade);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(GRADE);
			setState(63);
			match(ESPACO);
			setState(64);
			frase();
			setState(66); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(65);
					_la = _input.LA(1);
					if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(68); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeccaoContext extends ParserRuleContext {
		public TerminalNode SECCAO() { return getToken(FormativeExamParser.SECCAO, 0); }
		public RegraMensagemContext regraMensagem() {
			return getRuleContext(RegraMensagemContext.class,0);
		}
		public List<PerguntaContext> pergunta() {
			return getRuleContexts(PerguntaContext.class);
		}
		public PerguntaContext pergunta(int i) {
			return getRuleContext(PerguntaContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(FormativeExamParser.NEWLINE, 0); }
		public TerminalNode WINDOWS_NEWLINE() { return getToken(FormativeExamParser.WINDOWS_NEWLINE, 0); }
		public SeccaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterSeccao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitSeccao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitSeccao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccaoContext seccao() throws RecognitionException {
		SeccaoContext _localctx = new SeccaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_seccao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(SECCAO);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WINDOWS_NEWLINE || _la==NEWLINE) {
				{
				setState(71);
				_la = _input.LA(1);
				if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMERO) | (1L << PALAVRA) | (1L << HIFEN) | (1L << UNDERSCORE))) != 0)) {
				{
				setState(74);
				regraMensagem();
				}
			}

			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				pergunta();
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PerguntaContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(FormativeExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FormativeExamParser.NEWLINE, i);
		}
		public List<TerminalNode> WINDOWS_NEWLINE() { return getTokens(FormativeExamParser.WINDOWS_NEWLINE); }
		public TerminalNode WINDOWS_NEWLINE(int i) {
			return getToken(FormativeExamParser.WINDOWS_NEWLINE, i);
		}
		public PerguntaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pergunta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterPergunta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitPergunta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitPergunta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PerguntaContext pergunta() throws RecognitionException {
		PerguntaContext _localctx = new PerguntaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pergunta);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__0);
			setState(83);
			_la = _input.LA(1);
			if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(84);
			match(T__1);
			setState(85);
			type();
			setState(87); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(86);
					_la = _input.LA(1);
					if ( !(_la==WINDOWS_NEWLINE || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(89); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FraseContext extends ParserRuleContext {
		public List<PalavraContext> palavra() {
			return getRuleContexts(PalavraContext.class);
		}
		public PalavraContext palavra(int i) {
			return getRuleContext(PalavraContext.class,i);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(FormativeExamParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(FormativeExamParser.VIRGULA, i);
		}
		public List<TerminalNode> ESPACO() { return getTokens(FormativeExamParser.ESPACO); }
		public TerminalNode ESPACO(int i) {
			return getToken(FormativeExamParser.ESPACO, i);
		}
		public FraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_frase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterFrase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitFrase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitFrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FraseContext frase() throws RecognitionException {
		FraseContext _localctx = new FraseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_frase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			palavra();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESPACO || _la==VIRGULA) {
				{
				{
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VIRGULA) {
					{
					setState(92);
					match(VIRGULA);
					}
				}

				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(95);
					match(ESPACO);
					}
					}
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ESPACO );
				setState(100);
				palavra();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PalavraContext extends ParserRuleContext {
		public List<TerminalNode> PALAVRA() { return getTokens(FormativeExamParser.PALAVRA); }
		public TerminalNode PALAVRA(int i) {
			return getToken(FormativeExamParser.PALAVRA, i);
		}
		public List<TerminalNode> NUMERO() { return getTokens(FormativeExamParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(FormativeExamParser.NUMERO, i);
		}
		public List<TerminalNode> HIFEN() { return getTokens(FormativeExamParser.HIFEN); }
		public TerminalNode HIFEN(int i) {
			return getToken(FormativeExamParser.HIFEN, i);
		}
		public List<TerminalNode> UNDERSCORE() { return getTokens(FormativeExamParser.UNDERSCORE); }
		public TerminalNode UNDERSCORE(int i) {
			return getToken(FormativeExamParser.UNDERSCORE, i);
		}
		public PalavraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_palavra; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).enterPalavra(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FormativeExamListener ) ((FormativeExamListener)listener).exitPalavra(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FormativeExamVisitor ) return ((FormativeExamVisitor<? extends T>)visitor).visitPalavra(this);
			else return visitor.visitChildren(this);
		}
	}
